--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports:
+    tibble
 Depends: 
     R (>= 2.10)
 LazyData: true
