--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: healthyr
 Title: R package for mapping UK health data
-Version: 0.0.0.9000
+Version: 0.0.2.9000
 Authors@R: c(
     person("Mike", "Page", email = "mpage@redcross.org.uk", role = "cre"),
-    person("Matt", "Thomas", email = "mattthomas@redcross.org.uk", role = "aut"),
-    person("Aileen", "McDonald", email = "AileenMcDonald@redcross.org.uk", role = "aut"),
+    person("Matt", "Thomas", email = "MattThomas@redcross.org.uk", role = "aut"),
+    person("Jenna", "Tan", email = "JennaTan@redcross.org.uk", role = "aut"),
     person(family = "British Red Cross", role = "cph")
     )
 Description: A package to distribute and summarise on UK health data.
